# astro-nex

./: .gitignore  CHANGELOG.md  IN-MEMORIAM.md  NOTICE  README.md  pyproject.toml
docs/: HANDOFF.md  ROADMAP.md  WORKING-STYLE.md
docs/plans/: 2026-06-26-astro-nex-py3-gtk3-vertical-slice.md
docs/specs/: 2026-06-26-astro-nex-py3-gtk3-modernization-design.md
docs/superpowers/plans/: 2026-06-27-directions-port.md
docs/superpowers/specs/: 2026-06-27-directions-port-design.md  2026-06-27-macos-app-bundling-design.md
src/astronex/: __main__.py
src/astronex/core/: age_point.py  chart.py  config.py  constants.py  countries.py  database.py  directions.py  ephemeris.py  nexdate.py  state.py  timezones.py  utils.py  zodiac.py
tests/: test_age_point.py  test_age_timetable.py  test_chart.py  test_chart_dynamics.py  test_chart_entry.py  test_chart_types.py  test_chart_view.py  test_config.py  test_countries.py  test_database.py  test_directions.py  test_ephemeris.py  test_gui_e2e.py  test_nexdate.py  test_render.py  test_render_aspects.py  test_render_datasheets.py  test_render_diagrams.py  test_render_wheel_kinds.py  test_smoke.py  test_smoke_directions.py  test_state.py  test_surfaces.py  test_transits_contract.py  test_tz_sup_historical.py  test_utils.py  test_zodiac.py
tests/golden/: age_point.json  age_timetable.json  chart_types.json  directions.json  dynamics.json  ephemeris.json
tools/: build_macos_app.py
tools/macos/: Info.plist.tmpl  launcher.sh.tmpl
tools/original-docker/: .gitignore  Dockerfile  boss_stub.py  datasets.json  gen_golden.py  gen_golden.sh
(+10 files in other folders)
